--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<html><head><title></title></head>
+<html><head><link rel="stylesheet" type="text/css" href="style.css"><title></title></head>
   <body id="main">
       <section id="title">
         <h1>Sushant Singh Rajput</h1>
